# quorum

./: .gitignore  README.md  gateway.py  graph_recipes.py  langchain_gateway.py  mcp_server.py  provider_sessions.py  pyproject.toml  requirements-dev.txt  requirements.txt  safety_layer.py
.claude/: ralph-loop.local.md
.tool_logs/: configured-tools.jsonl  search-server.jsonl
frontend/: package-lock.json  package.json  playwright.config.ts
mcp_servers/: configured_tools_server.py  exec_server.py  logging_utils.py  search_server.py
orchestrator/: __init__.py  api.py  brief_v2_adapter.py  daemon.py  discovery_models.py  discovery_store.py  engine.py  execution_brief.py  execution_feedback.py  founder_bootstrap.py  handoff.py  handoff_bridge.py  handoff_models.py  idea_graph.py  memory_graph.py  models.py  models_bootstrap.py  preference_model.py  ranking.py  repo_digest.py  repo_graph.py  repodna.py  scenarios.py  scheduler.py  shared_contracts.py  tool_configs.py
scripts/: bootstrap_backend_env.sh  seed_parity_session.py  test_backend.sh
tests/: test_accounts_api.py  test_api_contracts.py  test_bootstrap_imports.py  test_brief_v2_adapter.py  test_configured_tools_server.py  test_daemon_api.py  test_debate_protocols.py  test_discovery_api.py  test_evolution_archive.py  test_execution_feedback_api.py  test_founder_approval_workflow.py  test_founder_bootstrap.py  test_founder_bootstrap_route.py  test_gateway_mcp_registration.py  test_guardrails_api.py  test_handoff_api.py  test_handoff_seam_integration.py  test_idea_memory_graph_api.py  test_improvement_api.py  test_inbox_api.py  test_interactive_runtime.py  test_langchain_gateway.py  test_market_simulation_api.py  test_moa_mode.py  test_modes.py  test_novelty_tools.py  test_observability_api.py  test_preference_api.py  test_protocol_compiler.py  test_provider_sessions.py  test_ranking_api.py  test_repo_dna_api.py  test_repo_graph_api.py  test_research_api.py  test_runtime_recovery.py  test_simulation_api.py  (+3 more)
(+171 files in other folders)
