[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quorum"
version = "0.1.0"
description = "FounderOS multi-agent discovery and orchestration engine"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "httpx>=0.24",
    "pydantic>=2.0",
]

[project.optional-dependencies]
clickhouse = [
    "clickhouse-connect>=0.6",
]
api = [
    "sse-starlette>=1.6",
]
research = [
    "langchain-core>=0.1",
    "langgraph>=0.0",
    "langchain-openai>=0.1",
]
mcp = [
    "mcp>=0.1",
]
graph = [
    "neo4j>=5.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
