[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quorum"
version = "0.1.0"
description = "FounderOS multi-agent discovery and orchestration engine"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Martin Campbell" },
]

dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "httpx>=0.24",
    "pydantic>=2.0",
    "sse-starlette>=1.6",
]

[project.urls]
Homepage = "https://github.com/MartinCampbell1/quorum"
Repository = "https://github.com/MartinCampbell1/quorum"
Issues = "https://github.com/MartinCampbell1/quorum/issues"

[project.optional-dependencies]
clickhouse = [
    "clickhouse-connect>=0.6",
]
api = [
    "sse-starlette>=1.6",
]
research = [
    "langchain-core>=0.1",
    "langgraph>=0.0",
    "langchain-openai>=0.1",
]
mcp = [
    "mcp>=0.1",
]
graph = [
    "neo4j>=5.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = [
    "orchestrator",
    "mcp_servers",
]
include = [
    "*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
